# bixr

./: LICENSE  README.rst  setup.cfg  setup.py
.github/workflows/: publish-to-pypi.yml
bixr/: __init__.py  api.py  llapi.py
src/bixr/: __init__.py  api.py  llapi.py
