[metadata]
name = bixr
version = attr: bixr.__version__
author = Riccardo Zanol
author_email = rz@riccza.nl
description = Banca d'Italia eXchange Rates
long_description = file: README.rst
long_description_content_type = text/x-rst
url = https://github.com/riccz/bixr
project_urls =
    Bug Tracker = https://github.com/riccz/bixr/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires = 
    requests
    requests-cache

[options.extras_require]
pandas = pandas

[options.packages.find]
where = src